# RepoPrivacyGuardian

./: .editorconfig  .env.example  .gitignore  AGENTS.MD  CHANGELOG.md  DESIGN.md  LICENSE  NOTICE  README.MD  Repo_Privacy_Guardian.py  capture_gui.py  pyproject.toml  pyrightconfig.json  repo_privacy_guardian_artifacts.py  repo_privacy_guardian_github.py  repo_privacy_guardian_prompts.py  repo_privacy_guardian_runtime.py  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: ci.yml
config/requirements/: requirements-dev.txt  requirements-gui.txt  requirements-remediation.txt  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPMENT_AUDIT.md  DOGFOODING.md  ENGINEERING_DECISIONS.md  KNOWN_ISSUES.md  LEARNED_LESSONS.md  LOCAL_DEVELOPMENT.md  OPERATIONS.md  POLICY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  ROADMAP.md  TROUBLESHOOTING.md  UX_UI_AUDIT.md  VERSIONING.md
docs/prompts/: 01_AUDITORIA_Y_SEGUIMIENTO.prompt.md  02_PARIDAD_GUI_CLI.prompt.md  04_EJECUCION_AGENTICA_CLI.prompt.md  05_DOGFOODING_AUDIT_ONLY.prompt.md  06_PREPARACION_ENTORNO_AGENTICA.prompt.md  07_AUDITORIA_REPARACION_AGENTICA.prompt.md
docs/prompts/en/: 04_AGENTIC_CLI_EXECUTION.prompt.md  05_DOGFOODING_AUDIT_ONLY.prompt.md  06_AGENTIC_ENVIRONMENT_SETUP.prompt.md  07_AGENTIC_AUDIT_AND_REPAIR.prompt.md
docs/releases/: v1.5.1.md
prompts/: 02_PARIDAD_GUI_CLI.prompt.md  03_MEJORA_GUI_GITHUB_EMAIL.prompt.md
repo_privacy_guardian/: __init__.py  agent_summary.py  artifacts.py  config.py  core.py  evidence_taxonomy.py  execution.py  github.py  github_fix_guide.py  history_parsing.py  metrics.py  policy.py  redaction.py  remediation.py  report_diff.py  reporting.py  scanner.py  strict_profiles.py  suppressions.py  tooling.py
repo_privacy_guardian/gui/: __init__.py  app.py  assets.py  background.py  dialogs.py  locale.py  navigation.py  state.py  theme.py  window.py
repo_privacy_guardian_assets/: __init__.py
repo_privacy_guardian_resources/: POLICY.md  __init__.py
scripts/: benchmark_large_history.py  check_release_contract.py  release_readiness.py  visual_qa_gui.py
tests/: conftest.py  release_smoke_cli.py  release_smoke_gui.py  test_benchmark_large_history.py  test_encoding_guardrails.py  test_git_identity.py  test_gui_adapters.py  test_publication_gate_regressions.py  test_release_contract.py  test_release_hygiene.py  test_release_readiness_runtime.py  test_report_diff.py  test_reporting_and_policy.py
