[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-privacy-guardian"
version = "1.0.0"
description = "Local-first publication gate for auditing and hardening Git repositories before public release."
readme = "README.MD"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Axel E. Sacca" },
]
keywords = ["git", "privacy", "security", "publication-gate", "release-engineering"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/axeljackal/RepoPrivacyGuardian"
Issues = "https://github.com/axeljackal/RepoPrivacyGuardian/issues"
Source = "https://github.com/axeljackal/RepoPrivacyGuardian"
Changelog = "https://github.com/axeljackal/RepoPrivacyGuardian/blob/main/CHANGELOG.md"

[project.optional-dependencies]
gui = ["customtkinter>=5.2.2,<6"]
remediation = ["git-filter-repo>=2.45,<3"]
rewrite = ["git-filter-repo>=2.45,<3"]
test = [
  "build>=1.2,<2",
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<6",
]
dev = [
  "customtkinter>=5.2.2,<6",
  "git-filter-repo>=2.45,<3",
  "build>=1.2,<2",
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<6",
]

[project.scripts]
repo-privacy-guardian = "Repo_Privacy_Guardian:main"

[tool.setuptools]
py-modules = ["Repo_Privacy_Guardian"]
packages = ["repo_privacy_guardian_resources"]

[tool.setuptools.package-data]
repo_privacy_guardian_resources = ["POLICY.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
branch = false
source = ["."]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
omit = ["tests/*"]
