[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-privacy-guardian"
version = "1.4.6"
description = "Local-first publication gate for auditing and hardening Git repositories before public release."
readme = "README.MD"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Axel E. Sacca" },
]
keywords = ["git", "privacy", "security", "publication-gate", "release-engineering"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Okavango-SAS/RepoPrivacyGuardian"
Issues = "https://github.com/Okavango-SAS/RepoPrivacyGuardian/issues"
Source = "https://github.com/Okavango-SAS/RepoPrivacyGuardian"
Changelog = "https://github.com/Okavango-SAS/RepoPrivacyGuardian/blob/main/CHANGELOG.md"

[project.optional-dependencies]
gui = ["customtkinter>=5.2.2,<6", "pillow>=10,<13", "tkinterdnd2>=0.4.3,<0.5"]
remediation = ["git-filter-repo>=2.45,<3"]
rewrite = ["git-filter-repo>=2.45,<3"]
test = [
  "build>=1.2,<2",
  "pip-audit>=2.10,<3",
  "pyright>=1.1.408,<2",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5.0,<6",
  "ruff>=0.15.5,<0.16",
]
dev = [
  "customtkinter>=5.2.2,<6",
  "pillow>=10,<13",
  "tkinterdnd2>=0.4.3,<0.5",
  "git-filter-repo>=2.45,<3",
  "build>=1.2,<2",
  "pip-audit>=2.10,<3",
  "pyright>=1.1.408,<2",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5.0,<6",
  "ruff>=0.15.5,<0.16",
]

[project.scripts]
repo-privacy-guardian = "Repo_Privacy_Guardian:main"

[tool.setuptools]
py-modules = ["Repo_Privacy_Guardian", "repo_privacy_guardian_artifacts", "repo_privacy_guardian_github", "repo_privacy_guardian_prompts", "repo_privacy_guardian_runtime"]
packages = ["repo_privacy_guardian_resources", "repo_privacy_guardian_assets"]

[tool.setuptools.package-data]
repo_privacy_guardian_resources = ["POLICY.md"]
repo_privacy_guardian_assets = ["*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=. --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = false
source = ["."]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
omit = ["tests/*", "scripts/*"]

[tool.ruff]
target-version = "py310"
